# submitit-tools

./: .gitignore  README.md  example.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish.yml
configs/: __init__.py  run_config.py  submitit_config.py
scripts/: .gitignore  example_executor.py  example_print_out_gpus.py  example_torch_multi_gpu.py  example_torch_multi_node.py  example_torch_run.py  run_script.py  torch_configs.py
submitit_configs/: __init__.py  job_config.py  run_config.py  submitit_config.py
submitit_tools/: __init__.py  base_classes.py  create_executor.py  create_objects.py  custom_jobs.py  run_state.py  setup.py  utils.py
submitit_tools/configs/: job_config.py  submitit_config.py
submitit_tools/jobs/: __init__.py  base_classes.py  default_jobs.py  run_state.py  utils.py
submitit_torch/: __init__.py  torch_config.py  torch_job.py
