[project]
name = "submitit-tools"
version = "0.1.0"
description = "A package to manage slurm jobs on a HPC cluster"
authors = [
    {name = "Jacob Berg", email = "jacob33@cs.washington.edu"}
]
dependencies = [
    "submitit",
    "tqdm",
    "wandb"
]
requires-python = ">=3.8"
readme = "README.md"

[project.optional-dependencies]
torch = ["torch", "torchvision"]

[project.urls]
Repository = "https://github.com/WEIRDLabUW/submitit-tools"

[build-system]
requires = ["setuptools>=45", "wheel", "build"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["submitit_tools"]

